# SPMS

./: .gitignore  Dockerfile  extract_data.py  misc.py  problems.txt  pyproject.toml  requirements.txt  service.json  urlplan.txt
agencies/: admin.py  models.py  serializers.py  urls.py  views.py
agencies/migrations/: 0001_initial.py  0002_initial.py
business_areas/: admin.py  apps.py  models.py
business_areas/migrations/: 0001_initial.py  0002_initial.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
classifications/: admin.py  models.py  serializers.py  urls.py  views.py
classifications/migrations/: 0001_initial.py  0002_initial.py  0003_alter_businessarea_creator_and_more.py
communication/: admin.py  models.py  serializers.py  urls.py  views.py
communication/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
communications/: admin.py  models.py  serializers.py  urls.py  views.py
communications/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
config/: authentication.py  settings.py  urls.py
contacts/: admin.py  models.py  serializers.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_initial.py
documents/: admin.py  models.py  serializers.py  views.py
documents/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
entities/: admin.py  models.py  serializers.py  urls.py  views.py
entities/migrations/: 0001_initial.py  0002_initial.py
locations/: admin.py  models.py  serializers.py  urls.py  views.py
locations/migrations/: 0001_initial.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_ararpdf_businessareaphoto_coverpage_and_more.py
migrator/: .gitignore  ChoiceLauncher.py  ChoiceViewer.py  Extractor.py  FileHandler.py  Loader.py  Migrator.py  README.md  Transformer.py  misc.py  pyproject.toml
projects/: admin.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_initial.py
quotes/: admin.py  models.py  serializers.py  unique_quotes.txt  urls.py  views.py
quotes/migrations/: 0001_initial.py  0002_initial.py  0003_quotereport_details.py
reports/: admin.py  models.py  serializers.py  urls.py  views.py
reports/migrations/: 0001_initial.py  0002_alter_ararreport_options.py  0002_initial.py
tasks/: models.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
