[tool.poetry]
name = "spms"
version = "0.1.0"
description = ""
authors = ["idabblewith <109533655+idabblewith@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.14.0"
black = "^23.3.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
django-environ = "^0.10.0"
pandas = "^2.0.0"
djangorestframework-simplejwt = "^5.2.2"
django-cors-headers = "^3.14.0"
dj-database-url = "^1.3.0"
pyjwt = "^2.6.0"
requests = "^2.28.2"
reportlab = "^4.0.0"
dbca-utils = "^1.1.6"
beautifulsoup4 = "^4.12.2"
asgiref = "^3.7.2"
certifi = "^2023.5.7"
charset-normalizer = "^3.1.0"
click = "^8.1.3"
colorama = "^0.4.6"
freetype-py = "^2.4.0"
idna = "^3.4"
mypy-extensions = "^1.0.0"
numpy = "^1.25.0"
packaging = "^23.1"
pathspec = "^0.11.1"
pillow = "^9.5.0"
platformdirs = "^3.6.0"
pycairo = "^1.24.0"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
rlpycairo = "^0.3.0"
setuptools = "^68.0.0"
six = "^1.16.0"
soupsieve = "^2.4.1"
sqlparse = "^0.4.4"
typing-extensions = "^4.6.3"
tzdata = "^2023.3"
urllib3 = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
