[tool.poetry]
name = "etl-migrator"
version = "0.1.0"
description = ""
authors = ["idabblewith <109533655+idabblewith@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "etl_migrator"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.2"
black = "^23.3.0"
psycopg2-binary = "^2.9.6"
tqdm = "^4.65.0"
python-dotenv = "^1.0.0"
click = "^8.1.3"
colorama = "^0.4.6"
mypy-extensions = "^1.0.0"
numpy = "^1.25.0"
packaging = "^23.1"
pathspec = "^0.11.1"
platformdirs = "^3.6.0"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
six = "^1.16.0"
soupsieve = "^2.4.1"
tzdata = "^2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
